--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,41 @@
-.App {
+/* .App {
+  background-color: black;
+} */
+body {
+  background-color: black;
+}
+
+.titulo {
+  display: block;
+  margin: auto;
+  margin-top: 2em;
+}
+
+.subtitulo {
+  color: white;
+  font-size: 1.125rem;
+  font-family: 'Open Sans';
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.contenedorBotonesCategoria {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: space-around;
+  width: 90%;
+  margin: auto;
+}
+
+button.categoria {
+  border: 4px solid #6B63B5;
+  border-radius: 2.56277px;
+  background: none;
   color: white;
+  width: 140px;
+  height: 42.93px;
+  font-size: 0.813rem;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button.categoria:hover {
+  background: rgba(107, 99, 181, 0.6);
+  border-radius: 4px;
 }
