media query para 1024px

--- a/src/landing /Gallery.scss
+++ b/src/landing /Gallery.scss
@@ -1,43 +1,83 @@
-.titulo {
-    display: block;
-    margin: auto;
-    margin-top: 2rem;
-}
+.gallery {
 
-.subtitulo {
-    color: white;
-    font-size: 1.125rem;
-    font-family: 'Open Sans';
-    text-align: center;
-}
+    .namePage {
+        display: block;
+        margin: auto;
+        margin-top: 2rem;
+    }
 
-.contenedorBotonesCategoria {
-    display: flex;
-    justify-content: space-around;
-    width: 90%;
-    margin: auto;
-}
+    .instructions {
+        color: white;
+        font-size: 1.125rem;
+        font-family: 'Open Sans';
+        text-align: center;
+        margin-top: 0.5rem;
+    }
 
-button.categoria {
-    border: 4px solid #6B63B5;
-    border-radius: 2.56277px;
-    background: none;
-    color: white;
-    width: 140px;
-    height: 42.93px;
-    font-size: 0.813rem;
-}
+    .categoryButtonContainer {
+        display: flex;
+        justify-content: space-around;
+        width: 90%;
+        margin: auto;
 
-button.categoria:hover {
-    background: rgba(107, 99, 181, 0.6);
-    border-radius: 4px;
-}
+        .category {
+            border: 4px solid #6B63B5;
+            border-radius: 2.56277px;
+            background: none;
+            color: white;
+            width: 40%;
+            padding-top: 0.5rem;
+            padding-bottom: 0.5rem;
+            font-size: 0.813rem;
 
-main.contenido {
-    margin-top: 2.625rem;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 1rem;
-    padding-left: 1rem;
-    padding-right: 1rem;
+            &:hover {
+                background: rgba(107, 99, 181, 0.6);
+                border-radius: 4px;
+            }
+
+        }
+
+    }
+
+    .contents {
+        margin-top: 2.625rem;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 1rem;
+        padding-left: 1rem;
+        padding-right: 1rem;
+    }
+
+    @media only screen and (min-width: 1024px) {
+
+        .namePage {
+
+            margin-top: 7.5rem;
+            height: 3.3rem;
+        }
+
+        .instructions {
+            font-size: 2.25rem;
+            margin-top: 1.5rem;
+        }
+
+        .categoryButtonContainer {
+            width: 55%;
+            gap: 6rem;
+
+            .category {
+                font-size: 1.063rem;
+                padding-top: 1rem;
+                padding-bottom: 1rem;
+            }
+        }
+
+        .contents {
+            width: 82%;
+            margin: auto;
+            margin-top: 5rem;
+            gap: 2rem;
+        }
+    }
+
 }
