--- a/src/landing /CharacterCard.scss
+++ b/src/landing /CharacterCard.scss
@@ -1,3 +1,7 @@
+.fontBold {
+    font-weight: bold;
+}
+
 .characterCard {
     /* width: 8.75rem; */
     display: flex;
@@ -6,16 +10,32 @@
     width: 100%;
     border-radius: 0.313rem;
     overflow: hidden;
+    font-family: Open Sans;
+    height: 100%;
 
     .profileImage {
         background: linear-gradient(90deg, #FF0000 4.67%, #FED482 96.97%);
-        height: 5.438rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        .image {
+            object-fit: cover;
+            object-position: top;
+            width: 4rem;
+            height: 4rem;
+            margin: 0.5rem 0;
+            border-radius: 50%;
+
+        }
     }
 
     .cardInformation {
         background: white;
         display: flex;
         flex-direction: column-reverse;
+        flex: 1 1 0;
+        justify-content: space-between;
 
         .statusInformation {
             display: flex;
@@ -50,6 +70,16 @@
 
             .profile {
                 display: none;
+                font-size: 0.875rem;
+
+                p {
+                    color: #565353;
+                    margin: 0.438rem 0;
+
+                    span {
+                        color: black;
+                    }
+                }
             }
         }
 
@@ -64,7 +94,13 @@
         .profileImage {
             background: linear-gradient(180deg, #FF0000 4.67%, #FED482 96.97%);
             width: 40%;
-            height: auto;
+            align-items: center;
+
+            .image {
+                width: 7rem;
+                height: 7rem;
+                // margin: 1rem 0;
+            }
         }
 
         .cardInformation {
@@ -98,21 +134,17 @@
                 .charactersName {
                     margin: 0;
 
-
                     .name {
                         text-align: start;
                         padding-top: 0;
+                        font-size: 1.4rem;
+
                     }
                 }
 
                 .profile {
                     display: inherit;
 
-                    h5 {
-                        margin-top: .5rem;
-                        margin-bottom: .5rem;
-
-                    }
                 }
             }
         }
