--- a/src/landing /Gallery.scss
+++ b/src/landing /Gallery.scss
@@ -23,7 +23,7 @@
         .category {
             border: 4px solid #6B63B5;
             border-radius: 2.56277px;
-            background: none;
+            background: rgba(0, 0, 0, 0.6);
             color: white;
             width: 40%;
             padding-top: 0.5rem;
