--- a/src/App.scss
+++ b/src/App.scss
@@ -3,5 +3,6 @@ body {
 
   @media only screen and (min-width: 1024px) {
     background-image: url("/Castle.png");
+    background-repeat: no-repeat;
   }
 }
