--- a/src/landing /CharacterCard.scss
+++ b/src/landing /CharacterCard.scss
@@ -14,10 +14,26 @@
     height: 100%;
 
     .profileImage {
-        background: linear-gradient(90deg, #FF0000 4.67%, #FED482 96.97%);
         display: flex;
         justify-content: center;
         align-items: center;
+        background: linear-gradient(90deg, #4534df 4.67%, #6B63B5 96.97%);
+
+        &.Gryffindor {
+            background: linear-gradient(90deg, #FF0000 4.67%, #FED482 96.97%);
+        }
+
+        &.Slytherin {
+            background: linear-gradient(90deg, #1C792B 0%, #82E95E 100%);
+        }
+
+        &.Hufflepuff {
+            background: linear-gradient(90deg, #FFC700 0%, #FFF388 100%);
+        }
+
+        &.Ravenclaw {
+            background: linear-gradient(90deg, #0597B7 0%, #66D1FF 100%);
+        }
 
         .image {
             object-fit: cover;
@@ -37,6 +53,10 @@
         flex: 1 1 0;
         justify-content: space-between;
 
+        &.false {
+            background: #CCCCCC;
+        }
+
         .statusInformation {
             display: flex;
             padding: .5rem;
@@ -44,10 +64,19 @@
             .statuses {
                 flex: 1;
 
+                .dead {
+                    display: none;
+                }
+
                 h4 {
                     font-size: 0.688rem;
                     color: #999999;
                     margin: 0;
+                    padding: 0.1rem 0;
+
+                    &.separator {
+                        display: none;
+                    }
                 }
             }
 
@@ -92,9 +121,25 @@
         border-radius: 1rem;
 
         .profileImage {
-            background: linear-gradient(180deg, #FF0000 4.67%, #FED482 96.97%);
             width: 40%;
             align-items: center;
+            background: linear-gradient(135deg, #4534df 4.67%, #6B63B5 96.97%);
+
+            &.Gryffindor {
+                background: linear-gradient(135deg, #FF0000 4.67%, #FED482 96.97%);
+            }
+
+            &.Slytherin {
+                background: linear-gradient(135deg, #1C792B 0%, #82E95E 100%);
+            }
+
+            &.Hufflepuff {
+                background: linear-gradient(135deg, #FFC700 0%, #FFF388 100%);
+            }
+
+            &.Ravenclaw {
+                background: linear-gradient(135deg, #0597B7 0%, #66D1FF 100%);
+            }
 
             .image {
                 width: 7rem;
@@ -115,11 +160,19 @@
 
                 .statuses {
                     align-self: center;
+                    display: flex;
 
                     h4 {
                         font-family: Open Sans;
                         font-size: 0.875;
+
+                        &.separator {
+                            display: flex;
+                            padding-left: 0.3rem;
+                            padding-right: 0.3rem;
+                        }
                     }
+
                 }
 
                 .iconoRectangulo {
