--- a/src/landing /Gallery.scss
+++ b/src/landing /Gallery.scss
@@ -35,6 +35,11 @@
                 border-radius: 4px;
             }
 
+            &:active {
+                background: #6B63B5;
+                border-radius: 4px;
+            }
+
         }
 
     }
