botones de categoria con color de fondo si estan activos

--- a/src/landing /Gallery.scss
+++ b/src/landing /Gallery.scss
@@ -40,6 +40,11 @@
                 border-radius: 4px;
             }
 
+            &.false {
+                background: #6B63B5;
+                border-radius: 4px;
+            }
+
         }
 
     }
