modificación a  clase del boton

--- a/src/landing /Gallery.scss
+++ b/src/landing /Gallery.scss
@@ -40,7 +40,7 @@
                 border-radius: 4px;
             }
 
-            &.false {
+            &.selected {
                 background: #6B63B5;
                 border-radius: 4px;
             }
