--- a/src/landing /Gallery.scss
+++ b/src/landing /Gallery.scss
@@ -40,6 +40,11 @@
                 border-radius: 4px;
             }
 
+            &.selected {
+                background: #6B63B5;
+                border-radius: 4px;
+            }
+
         }
 
     }
