--- a/src/landing /AddCharacter.scss
+++ b/src/landing /AddCharacter.scss
@@ -5,10 +5,11 @@
     width: 100vw;
     height: 100vh;
     overflow-y: hidden;
-    background-color: rgba(0, 0, 0, .2);
+    background-color: rgba(0, 0, 0, .8);
     display: flex;
     justify-content: center;
     font-family: 'Open Sans';
+    z-index: 5;
 
     .container {
         background: #FFFFFF;
@@ -78,7 +79,7 @@
                             box-shadow: 0px 2px 0px #0000003b;
                             border: 1px solid #c9c0c0;
                             width: 100%;
-                            height: 2rem;
+                            padding: 1rem;
                             box-sizing: border-box;
                         }
 
@@ -116,10 +117,10 @@
                         border: 4px solid #6B63B5;
                         border-radius: 4px;
                         width: 100%;
-                        height: 2rem;
                         letter-spacing: 0.2em;
                         color: #FFFFFF;
                         margin-bottom: 1rem;
+                        padding: 0.75rem;
 
                         &:hover {
                             background: rgba(107, 99, 181, 0.6);
@@ -131,6 +132,10 @@
                             border-radius: 4px;
                         }
                     }
+                }
+
+                .error {
+                    color: red;
                 }
 
             }
