se agregó marca de seleccionado a las tarjetas

--- a/src/landing /CharacterCard.scss
+++ b/src/landing /CharacterCard.scss
@@ -80,7 +80,12 @@
                 }
             }
 
-            .iconoRectangulo {}
+            .iconoRectangulo {
+                img{
+                   
+                }
+              
+            }
         }
 
         .characterInformation {
