correcion css align-items

--- a/src/landing /CharacterCard.scss
+++ b/src/landing /CharacterCard.scss
@@ -193,7 +193,7 @@
                     margin: 0;
 
                     .name {
-                        text-align: start;
+                        text-align: left;
                         padding-top: 0;
                         font-size: 1.4rem;
 
