--- a/src/landing /AddCharacter.scss
+++ b/src/landing /AddCharacter.scss
@@ -48,9 +48,6 @@
                 .contents {
                     display: grid;
                     grid-template-columns: repeat(1, 1fr);
-                    // gap: 2rem;
-                    // padding-left: 1rem;
-                    // padding-right: 1rem;
                     width: 90%;
                     margin: auto;
                     margin-top: 1rem;
@@ -60,7 +57,7 @@
                         display: flex;
                         flex-direction: column;
                         width: 100%;
-                        align-items: start;
+                        align-items: flex-start;
                         margin-bottom: 1rem;
 
                         .title {
@@ -91,7 +88,7 @@
                             grid-template-columns: repeat(2, 1fr);
 
                             .option {
-                                justify-self: start;
+                                justify-self: flex-start;
                                 padding-left: 2rem;
 
                                 &:hover {
